Associar Projeto ao Membro

--- a/src/main/webapp/WEB-INF/jsp/template/navigation.jspf
+++ b/src/main/webapp/WEB-INF/jsp/template/navigation.jspf
@@ -6,6 +6,7 @@
      <ul class="nav navbar-nav">
           <li class="active"><a href="/">Home</a></li>
           <li><a href="/projeto/list">Projeto</a></li>
+          <li><a href="/associar/list-membro-projeto">Associar Membro/Projeto</a></li>
      </ul>
      <ul class="nav navbar-nav navbar-right">
          <li><a href="/logout">Logout</a></li>
